fixup: homepage icon colours/shadows for visibility

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -255,9 +255,10 @@
 
 .post-icons {
   font-size: 2em;
-  color: white;
+  color: lightcoral;
   display: inline;
   vertical-align: middle;
+  text-shadow: black 2px 2px;
 }
 
 /**
